--- a/package.json
+++ b/package.json
@@ -3,14 +3,16 @@
   "version": "1.0.0",
   "private": true,
   "scripts": {
-    "dev": "GOOGLE_APPLICATION_CREDENTIALS=~/timelinecascade-796a6cd097cb.json nuxt",
-    "build": "nuxt build",
-    "start": "nuxt start",
-    "generate": "nuxt generate",
+    "dev": "GOOGLE_APPLICATION_CREDENTIALS=~/timelinecascade-796a6cd097cb.json nuxt-ts",
+    "build": "nuxt-ts build",
+    "start": "nuxt-ts start",
+    "generate": "nuxt-ts generate",
     "deploy": "npm run build && gcloud app deploy --project timelinecascade"
   },
   "dependencies": {
+    "@nuxt/typescript-runtime": "^2.1.0",
     "@nuxtjs/axios": "^5.13.6",
+    "@tailwindcss/typography": "^0.4.1",
     "core-js": "^3.15.1",
     "dotenv": "^9.0.2",
     "express": "^4.17.1",
